--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,13 @@ docs.json
 __dummy.html
 docs/
 /async
-async.so
-async.dylib
-async.dll
-async.a
-async.lib
+*async.so
+*async.dylib
+*async.dll
+*async.a
+*async.lib
 async-test-*
+/test/test
 *.exe
 *.pdb
 *.o
