Rebrand project to ninox.d-async

--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,12 @@ docs.json
 __dummy.html
 docs/
 /async
-*async.so
-*async.dylib
-*async.dll
-*async.a
-*async.lib
-async-test-*
+*.so
+*.dylib
+*.dll
+*.a
+*.lib
+*-test-*
 /test/test
 *.exe
 *.pdb
